<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteActivity"
    android:background="@drawable/bg_complete">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/tvMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_toLeftOf="@+id/imageView2"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/money" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/tvCongratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/helloTextColor"
            android:text="@string/congratulations" />

        <TextView
            android:id="@+id/tvCompleteBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorWhite"
            android:layout_below="@id/tvCongratulations"
            android:layout_marginTop="18sp"
            android:text="@string/complete1" />

        <TextView
            android:id="@+id/tvCompleteBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorWhite"
            android:layout_below="@id/tvCompleteBody"
            android:layout_marginTop="18sp"
            android:text="@string/complete2" />

        <TextView
            android:id="@+id/tvCompleteBody3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorWhite"
            android:layout_below="@id/tvCompleteBody2"
            android:layout_marginTop="18sp"
            android:text="@string/complete3" />

        <TextView
            android:id="@+id/tvCompleteBody4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18sp"
            android:textColor="@color/helloTextColor"
            android:layout_below="@id/tvCompleteBody3"
            android:text="@string/complete4" />

    </RelativeLayout>

</RelativeLayout>