<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_questions"
    tools:context=".ReasonForAccountingForPersonaFinancesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:translationZ="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_centerVertical="true"
                android:id="@+id/rlProgress">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="0"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/taken" />

                    <TextView
                        android:id="@+id/tvMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="600"
                        android:textColor="@color/colorTvCoinCount"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/coins" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1000"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressId"
                android:layout_marginTop="30dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_below="@+id/rlProgress"
                android:progressDrawable="@drawable/gradient_progress"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@color/colorWhite"
        android:padding="45dp"
        android:text="@string/yes_q6"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNext"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/page6"
        android:textColor="@color/colorTvCoinCount" />

    <EditText
        android:id="@+id/etAdvice"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvQuestion"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences|textMultiLine"
        android:background="@drawable/selector_lines_edit_view_bg"
        android:gravity="center_horizontal"
        android:hint="@string/answer_field" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/gradient_blue"
        android:foreground="@drawable/my_ripple"
        android:onClick="onClick"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

</RelativeLayout>